Project

General

Profile

Actions

Bug #53308

closed

pg-temp entries are not cleared for PGs that no longer exist

Added by Cory Snyder over 2 years ago. Updated 5 months ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

100%

Source:
Tags:
Backport:
pacific, octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When scaling down pg_num while it was in the process of scaling up, we consistently end up with stuck pg-temp entries for PGs that no longer exist. It appears that Ceph is not currently clearing pg-temp entries for PGs that no longer exist. We are unable to clear the pg-temp entries manually with `ceph osd pg-temp pg_num` because it validates that the PG exists before making a change.


Related issues 2 (0 open2 closed)

Copied to RADOS - Backport #53388: pacific: pg-temp entries are not cleared for PGs that no longer existResolvedCory SnyderActions
Copied to RADOS - Backport #53389: octopus: pg-temp entries are not cleared for PGs that no longer existResolvedCory SnyderActions
Actions #1

Updated by Cory Snyder over 2 years ago

  • Pull request ID set to 43989
Actions #2

Updated by Neha Ojha over 2 years ago

  • Project changed from Ceph to RADOS
Actions #3

Updated by Neha Ojha over 2 years ago

  • Status changed from New to Pending Backport
  • Backport set to pacific, octopus

Cory, I am marking this for backport to octopus and pacific, makes sense to you?

Actions #4

Updated by Backport Bot over 2 years ago

  • Copied to Backport #53388: pacific: pg-temp entries are not cleared for PGs that no longer exist added
Actions #5

Updated by Backport Bot over 2 years ago

  • Copied to Backport #53389: octopus: pg-temp entries are not cleared for PGs that no longer exist added
Actions #6

Updated by Cory Snyder over 2 years ago

That makes sense to me, thanks Neha!

Actions #7

Updated by Neha Ojha almost 2 years ago

  • Status changed from Pending Backport to Resolved
Actions #8

Updated by Konstantin Shalygin 5 months ago

  • % Done changed from 0 to 100
Actions

Also available in: Atom PDF